# TMC5160-FT232H-DLL

./: CMakeLists.txt  LICENSE  README.md
example/: tmc5160.exp  tmc5160.lib  tmc5160_test.py  tmc5160_test.vb
include/: tmc5160_dll.h  tmc5160_regs.h
src/: dll_api.cpp  ftdi_mpsse_spi.cpp  ftdi_mpsse_spi.h  tmc5160.cpp  tmc5160.h
